--- a/hugo.toml
+++ b/hugo.toml
@@ -2,23 +2,16 @@ baseURL = 'https://example.org/'
 languageCode = 'en-US'
 title = 'GdR - GPL'
 
-[menus]
-  [[menus.main]]
-    name = 'Home'
-    pageRef = '/'
-    weight = 10
+    
 
-  [[menus.main]]
-    name = 'Posts'
-    pageRef = '/posts'
-    weight = 20
-
-  [[menus.main]]
-    name = 'Tags'
-    pageRef = '/tags'
-    weight = 30
 
 [module]
   [module.hugoVersion]
     extended = false
     min = '0.146.0'
+
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
