--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-US'
-title = 'GdR - GPL'
+languageCode = 'fr-fr'
+title = 'GdR - SDL'
     
 
 
